POR/RefEdge/src/objects/Reference_Content_Type__c.object
<CustomObject>
    <description>Reference Content Type - Replace to native CRM Content (Bound 6)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Content_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Content Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_For_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to hide/Show this Reference content type from Filter of Ref Search page.</description>
        <label>Disable For Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recorded_Reference_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference Interview Type</label>
        <type>Checkbox</type>
    </fields>
    <label>Reference Content Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Custom_Content_Type__c</columns>
        <columns>Recorded_Reference_Type__c</columns>
        <columns>Note__c</columns>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RCT-{0000}</displayFormat>
        <label>Reference Content Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Content Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_CheckForCustomAndRecorded</fullName>
        <active>true</active>
        <description>Reference Content Type cannot be both a Reference Interview Type and a Custom Content Type.</description>
        <errorConditionFormula>AND( Custom_Content_Type__c , Recorded_Reference_Type__c)</errorConditionFormula>
        <errorMessage>Reference Content Type cannot be both a Reference Interview Type and a Custom Content Type. Please select only one of these choices.</errorMessage>
    </validationRules>
</CustomObject>